--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,23 @@
 {{ template "header.html" .}}
 
 <h1>Hello Gin!</h1>
+<!--
+    Предположим, что список топиков будет передан в шаблон в переменной payload.
+    Тогда следующий снипет выведет список всех топиков:
+-->
+<!--Loop over the `payload` variable, which is the list of articles-->
+{{range .payload }}
+    <!--Create the link for the article based on its ID-->
+    <a href="/article/view/{{.ID}}">
+        <!--Display the title of the article -->
+        <h2>{{.Title}}</h2>
+    </a>
+    <!--Display the content of the article-->
+    <p>{{.Content}}</p>
+{{end}}
+
+<!-- конец вставки payload -->
+
 
 <!--Embed the footer.html template at this location-->
 
